--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -97,11 +97,11 @@ bar.cyber-io.last-damaged=\u6700\u7D42\u30C0\u30E1\u30FC\u30B8\uFF1A{0}\u79D2
 bar.cyber-io.prism=\u30D7\u30EA\u30BA\u30E0
 bar.cyber-io.linked=\u30EA\u30F3\u30AF
 bar.cyber-io.unlinked=\u30EA\u30F3\u30AF\u7121\u3057
-bar.cyber-io.receiver=\u53D7\u4FE1\u8005\uFF1A{0}
-bar.cyber-io.sender=\u9001\u4FE1\u8005\uFF1A{0}
+bar.cyber-io.receiver=\u53D7\u4FE1\u8005
+bar.cyber-io.sender=\u9001\u4FE1\u8005
 bar.cyber-io.null=\u30CC\u30EB
-bar.cyber-io.client=\u30AF\u30E9\u30A4\u30A2\u30F3\u30C8\uFF1A{0}
-bar.cyber-io.host=\u30DB\u30B9\u30C8\uFF1B{0}
+bar.cyber-io.client=\u30AF\u30E9\u30A4\u30A2\u30F3\u30C8
+bar.cyber-io.host=\u30DB\u30B9\u30C8
 bar.cyber-io.rest-life=\u4F11\u606F\u751F\u6D3B
 bar.cyber-io.rest-life.figure=\u4F11\u606F\u751F\u6D3B\uFF1A{0}\u79D2
 bar.cyber-io.rest-resurrect=Rest Life: {0} \u6642\u9593
