--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -98,11 +98,11 @@ bar.cyber-io.last-damaged=Last Damage: {0}s
 bar.cyber-io.prism=\u043F\u0440\u0438\u0437\u043C\u0430
 bar.cyber-io.linked=\u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0439
 bar.cyber-io.unlinked=\u043D\u0435\u0442 \u0441\u0432\u044F\u0437\u0438
-bar.cyber-io.receiver=\u043F\u0440\u0438\u0435\u043C\u043D\u0438\u043A: {0}
-bar.cyber-io.sender=\u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u044C: {0}
+bar.cyber-io.receiver=\u043F\u0440\u0438\u0435\u043C\u043D\u0438\u043A
+bar.cyber-io.sender=\u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u0435\u043B\u044C
 bar.cyber-io.null=\u043D\u0443\u043B\u0435\u0432\u043E\u0439
-bar.cyber-io.client=\u043A\u043B\u0438\u0435\u043D\u0442: {0}
-bar.cyber-io.host=\u0425\u043E\u0437\u044F\u0438\u043D: {0}
+bar.cyber-io.client=\u043A\u043B\u0438\u0435\u043D\u0442
+bar.cyber-io.host=\u0425\u043E\u0437\u044F\u0438\u043D
 bar.cyber-io.rest-life=\u043E\u0441\u0442\u0430\u043B\u044C\u043D\u043E\u0435 \u0441\u0440\u043E\u043A \u0436\u0438\u0437\u043D\u0438
 bar.cyber-io.rest-life.figure=\u043E\u0441\u0442\u0430\u043B\u044C\u043D\u043E\u0435 \u0441\u0440\u043E\u043A \u0436\u0438\u0437\u043D\u0438: {0}s
 bar.cyber-io.rest-resurrect=\u043E\u0441\u0442\u0430\u043B\u044C\u043D\u043E\u0435 \u0436\u0438\u0437\u043D\u044C: {0} \u0432\u0440\u0435\u043C\u0435\u043D\u0430
