--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -98,12 +98,12 @@ bar.cyber-io.last-damaged=\u4E0A\u6B21\u4F24\u5BB3\uFF1A {0}s
 bar.cyber-io.prism=\u68F1\u955C
 bar.cyber-io.linked=\u5DF2\u8FDE\u63A5
 bar.cyber-io.unlinked=\u672A\u8FDE\u63A5
-bar.cyber-io.receiver=\u63A5\u6536\u7AEF\uFF1A {0}
-bar.cyber-io.sender=\u53D1\u9001\u7AEF\uFF1A {0}
+bar.cyber-io.receiver=\u63A5\u6536\u7AEF
+bar.cyber-io.sender=\u53D1\u9001\u7AEF
 bar.cyber-io.ani-state-last=\u6301\u7EED\u65F6\u95F4 {0}
 bar.cyber-io.null=Null
-bar.cyber-io.client=\u5BA2\u6237\u7AEF\uFF1A{0}
-bar.cyber-io.host=\u4E3B\u673A\uFF1A {0}
+bar.cyber-io.client=\u5BA2\u6237\u7AEF
+bar.cyber-io.host=\u4E3B\u673A
 bar.cyber-io.rest-life=\u5269\u4F59\u5BFF\u547D
 bar.cyber-io.rest-life.figure=\u5269\u4F59\u5BFF\u547D\uFF1A {0}s
 bar.cyber-io.rest-resurrect=\u5269\u4F59\u590D\u6D3B\u6B21\u6570\uFF1A {0} \u6B21
