--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -98,11 +98,11 @@ bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
 bar.cyber-io.prism=\u68F1\u93E1
 bar.cyber-io.linked=\u5DF2\u9023\u63A5
 bar.cyber-io.unlinked=\u672A\u9023\u63A5
-bar.cyber-io.receiver=\u63A5\u6536\u7AEF\uFF1A{0}
-bar.cyber-io.sender=\u767C\u9001\u7AEF\uFF1A{0}
+bar.cyber-io.receiver=\u63A5\u6536\u7AEF
+bar.cyber-io.sender=\u767C\u9001\u7AEF
 bar.cyber-io.null=\u7A7A
-bar.cyber-io.client=\u5BA2\u6236\u7AEF\uFF1A{0}
-bar.cyber-io.host=\u4E32\u6D41\u5668\uFF1A{0}
+bar.cyber-io.client=\u5BA2\u6236\u7AEF
+bar.cyber-io.host=\u4E32\u6D41\u5668
 bar.cyber-io.rest-life=Rest Life
 bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
