--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -104,11 +104,11 @@ bar.cyber-io.last-damaged=\u041E\u0441\u0442\u0430\u043D\u043D\u044F \u0448\u043
 bar.cyber-io.prism=\u041F\u0440\u0438\u0437\u043C\u0430
 bar.cyber-io.unlinked=\u0417'\u0454\u0434\u043D\u0430\u043D\u043E
 bar.cyber-io.linked.no=\u041D\u0435 \u0437'\u0454\u0434\u043D\u0430\u043D\u043E
-bar.cyber-io.receiver=\u041E\u0442\u0440\u0438\u043C\u0443\u0432\u0430\u0447: {0}
-bar.cyber-io.sender=\u0412\u0456\u0434\u043F\u0440\u0430\u0432\u043D\u0438\u043A: {0}
+bar.cyber-io.receiver=\u041E\u0442\u0440\u0438\u043C\u0443\u0432\u0430\u0447
+bar.cyber-io.sender=\u0412\u0456\u0434\u043F\u0440\u0430\u0432\u043D\u0438\u043A
 bar.cyber-io.null=\u041D\u0456\u0447\u043E\u0433\u043E
-bar.cyber-io.client=\u041A\u043B\u0456\u0454\u043D\u0442: {0}
-bar.cyber-io.host=\u0425\u043E\u0441\u0442: {0}
+bar.cyber-io.client=\u041A\u043B\u0456\u0454\u043D\u0442
+bar.cyber-io.host=\u0425\u043E\u0441\u0442
 bar.cyber-io.rest-life=\u041B\u0438\u0448\u0438\u043B\u043E\u0441\u044C \u0436\u0438\u0442\u0438
 bar.cyber-io.rest-life.figure=\u041B\u0438\u0448\u0438\u043B\u043E\u0441\u044C \u0436\u0438\u0442\u0438: {0} \u0441\u0435\u043A.
 bar.cyber-io.rest-resurrect=\u041B\u0438\u0448\u0438\u043B\u043E\u0441\u044C \u0436\u0438\u0442\u0438: {0} \u0440\u0430\u0437.
