Update zh_CN translation

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -5,75 +5,75 @@ Default=If you saw this page, it might mean you are using the CyberIO for test o
 Default.read=I see
 #---Do not translate---
 #Standard
-welcome=欢迎游玩 Cyber IO {0}.
+welcome=\u6b22\u8fce\u6e38\u73a9 Cyber IO {0}.
 Discord.title=Discord
-Discord=有时，当你独自漫步太空，可能会想寻找一个社区团队\n\
-你可以分享你的经验或者问些问题（当然你用不着问bug）。\n\
-尽管“飞声”信号不好，世界上仍然有人在惦记着你——Plum Star的Discord。\n\
-加入我们，分享你的际遇，坦露你的疑问吧！
+Discord=\u6709\u65f6\uff0c\u5f53\u4f60\u72ec\u81ea\u6f2b\u6b65\u592a\u7a7a\uff0c\u53ef\u80fd\u4f1a\u60f3\u5bfb\u627e\u4e00\u4e2a\u793e\u533a\u56e2\u961f\n\
+\u4f60\u53ef\u4ee5\u5206\u4eab\u4f60\u7684\u7ecf\u9a8c\u6216\u8005\u95ee\u4e9b\u95ee\u9898\uff08\u5f53\u7136\u4f60\u7528\u4e0d\u7740\u95eebug\uff09\u3002\n\
+\u5c3d\u7ba1\u201c\u98de\u58f0\u201d\u4fe1\u53f7\u4e0d\u597d\uff0c\u4e16\u754c\u4e0a\u4ecd\u7136\u6709\u4eba\u5728\u60e6\u8bb0\u7740\u4f60\u2014\u2014Plum Star\u7684Discord\u3002\n\
+\u52a0\u5165\u6211\u4eec\uff0c\u5206\u4eab\u4f60\u7684\u9645\u9047\uff0c\u5766\u9732\u4f60\u7684\u7591\u95ee\u5427\uff01
 Discord.link=https://discord.gg/PDwyxM3waw
-Discord.yes=打开链接
-Discord.no=标记为垃圾内容
-UpdateECHO.title=更新“飞声”
-UpdateECHO=News: 最近，“飞声”终端推出了新版本{0}。\n\
-  你可以点击下面的按钮更新你的终端
-UpdateECHO.button-a=更新
-UpdateECHO.button-b=以后提醒我
-UpdateECHO.button-c=不再显示
-UpdateECHO.break-update-warning=警告：最新版本的更新已损坏，可能会导致存档错误。请务必谨慎！
+Discord.yes=\u6253\u5f00\u94fe\u63a5
+Discord.no=\u6807\u8bb0\u4e3a\u5783\u573e\u5185\u5bb9
+UpdateECHO.title=\u66f4\u65b0\u201c\u98de\u58f0\u201d
+UpdateECHO=News: \u6700\u8fd1\uff0c\u201c\u98de\u58f0\u201d\u7ec8\u7aef\u63a8\u51fa\u4e86\u65b0\u7248\u672c{0}\u3002\n\
+  \u4f60\u53ef\u4ee5\u70b9\u51fb\u4e0b\u9762\u7684\u6309\u94ae\u66f4\u65b0\u4f60\u7684\u7ec8\u7aef
+UpdateECHO.button-a=\u66f4\u65b0
+UpdateECHO.button-b=\u4ee5\u540e\u63d0\u9192\u6211
+UpdateECHO.button-c=\u4e0d\u518d\u663e\u793a
+UpdateECHO.break-update-warning=\u8b66\u544a\uff1a\u6700\u65b0\u7248\u672c\u7684\u66f4\u65b0\u5df2\u635f\u574f\uff0c\u53ef\u80fd\u4f1a\u5bfc\u81f4\u5b58\u6863\u9519\u8bef\u3002\u8bf7\u52a1\u5fc5\u8c28\u614e\uff01
 #v2
-EmploymentVerification.title=验证雇佣状态
-EmploymentVerification=欢迎就职于Plum Star公司，祝你享受于崭新的全部赛博学科技！\n\
-但你可能会很烦恼，因为你需要干连接设备这种令人厌倦的工作。\n\
-无论如何，祝你好运！
-EmploymentVerification.read=加入！
+EmploymentVerification.title=\u9a8c\u8bc1\u96c7\u4f63\u72b6\u6001
+EmploymentVerification=\u6b22\u8fce\u5c31\u804c\u4e8ePlum Star\u516c\u53f8\uff0c\u795d\u4f60\u4eab\u53d7\u4e8e\u5d2d\u65b0\u7684\u5168\u90e8\u8d5b\u535a\u5b66\u79d1\u6280\uff01\n\
+\u4f46\u4f60\u53ef\u80fd\u4f1a\u5f88\u70e6\u607c\uff0c\u56e0\u4e3a\u4f60\u9700\u8981\u5e72\u8fde\u63a5\u8bbe\u5907\u8fd9\u79cd\u4ee4\u4eba\u538c\u5026\u7684\u5de5\u4f5c\u3002\n\
+\u65e0\u8bba\u5982\u4f55\uff0c\u795d\u4f60\u597d\u8fd0\uff01
+EmploymentVerification.read=\u52a0\u5165\uff01
 #v3
-ResearchProject.title=研究计划
-ResearchProject=早上好，新来的！自从之前坐你位子的员工按下暂停键后（嗯……物理层面上的），\n\
-全息项目（holo-proj）停了好长一段时间。\n\
-但好消息是是，现在这个项目已经移交到了你的手上，大善人，现在赶紧回去工作吧！
-ResearchProject.read=做工
-TheSHIP.title=“棱船”
-TheSHIP=想象你正身处一望无际的太空，什么东西对你而言是最重要的？毫无疑问，是太空飞船\n\
-最好最明智的选择正是“棱船”，由Plum Star公司出品，\n 基于核聚变能源控制和最新的奥罗博罗斯操作系统（质量保障）。\n\
-商品编号：111_1111_11_1001\n\
-注：“飞声”已经通过
-TheSHIP.read=标记为垃圾内容
-ECHO.title=“飞声”
-ECHO=为了处理在行星上数种物种与工具之间交流的障碍，“飞声”被发明了出来。\n\
-它提供了一种简单的方法来与彼此交互，只需要轻轻一点。\n\
-另外，“飞声”在终端存储了 cookie 以使您的体验更加舒适。\n\
-关于“飞声”在终端使用 cookie 的更多信息，请参见于[#e53935]*404 Not Found*[]。
-ECHO.read=通过
+ResearchProject.title=\u7814\u7a76\u8ba1\u5212
+ResearchProject=\u65e9\u4e0a\u597d\uff0c\u65b0\u6765\u7684\uff01\u81ea\u4ece\u4e4b\u524d\u5750\u4f60\u4f4d\u5b50\u7684\u5458\u5de5\u6309\u4e0b\u6682\u505c\u952e\u540e\uff08\u55ef\u2026\u2026\u7269\u7406\u5c42\u9762\u4e0a\u7684\uff09\uff0c\n\
+\u5168\u606f\u9879\u76ee\uff08holo-proj\uff09\u505c\u4e86\u597d\u957f\u4e00\u6bb5\u65f6\u95f4\u3002\n\
+\u4f46\u597d\u6d88\u606f\u662f\u662f\uff0c\u73b0\u5728\u8fd9\u4e2a\u9879\u76ee\u5df2\u7ecf\u79fb\u4ea4\u5230\u4e86\u4f60\u7684\u624b\u4e0a\uff0c\u5927\u5584\u4eba\uff0c\u73b0\u5728\u8d76\u7d27\u56de\u53bb\u5de5\u4f5c\u5427\uff01
+ResearchProject.read=\u505a\u5de5
+TheSHIP.title=\u201c\u68f1\u8239\u201d
+TheSHIP=\u60f3\u8c61\u4f60\u6b63\u8eab\u5904\u4e00\u671b\u65e0\u9645\u7684\u592a\u7a7a\uff0c\u4ec0\u4e48\u4e1c\u897f\u5bf9\u4f60\u800c\u8a00\u662f\u6700\u91cd\u8981\u7684\uff1f\u6beb\u65e0\u7591\u95ee\uff0c\u662f\u592a\u7a7a\u98de\u8239\n\
+\u6700\u597d\u6700\u660e\u667a\u7684\u9009\u62e9\u6b63\u662f\u201c\u68f1\u8239\u201d\uff0c\u7531Plum Star\u516c\u53f8\u51fa\u54c1\uff0c\n \u57fa\u4e8e\u6838\u805a\u53d8\u80fd\u6e90\u63a7\u5236\u548c\u6700\u65b0\u7684\u5965\u7f57\u535a\u7f57\u65af\u64cd\u4f5c\u7cfb\u7edf\uff08\u8d28\u91cf\u4fdd\u969c\uff09\u3002\n\
+\u5546\u54c1\u7f16\u53f7\uff1a111_1111_11_1001\n\
+\u6ce8\uff1a\u201c\u98de\u58f0\u201d\u5df2\u7ecf\u901a\u8fc7
+TheSHIP.read=\u6807\u8bb0\u4e3a\u5783\u573e\u5185\u5bb9
+ECHO.title=\u201c\u98de\u58f0\u201d
+ECHO=\u4e3a\u4e86\u5904\u7406\u5728\u884c\u661f\u4e0a\u6570\u79cd\u7269\u79cd\u4e0e\u5de5\u5177\u4e4b\u95f4\u4ea4\u6d41\u7684\u969c\u788d\uff0c\u201c\u98de\u58f0\u201d\u88ab\u53d1\u660e\u4e86\u51fa\u6765\u3002\n\
+\u5b83\u63d0\u4f9b\u4e86\u4e00\u79cd\u7b80\u5355\u7684\u65b9\u6cd5\u6765\u4e0e\u5f7c\u6b64\u4ea4\u4e92\uff0c\u53ea\u9700\u8981\u8f7b\u8f7b\u4e00\u70b9\u3002\n\
+\u53e6\u5916\uff0c\u201c\u98de\u58f0\u201d\u5728\u7ec8\u7aef\u5b58\u50a8\u4e86 cookie \u4ee5\u4f7f\u60a8\u7684\u4f53\u9a8c\u66f4\u52a0\u8212\u9002\u3002\n\
+\u5173\u4e8e\u201c\u98de\u58f0\u201d\u5728\u7ec8\u7aef\u4f7f\u7528 cookie \u7684\u66f4\u591a\u4fe1\u606f\uff0c\u8bf7\u53c2\u89c1\u4e8e[#e53935]*404 Not Found*[]\u3002
+ECHO.read=\u901a\u8fc7
 NewBrains.title=New Brains
-NewBrains=New Brains公司引领生物学、药学和神经学行业顶流，是宇宙中最大的公司之一。\n\
-正如其名，他们站在了脑科学的前沿位置上。\n你们大多数可能还没有注意到，这也是他们项目中的一部分。
-NewBrains.read=标记为已读
-AdBlock.title=屏蔽广告
-AdBlock=你觉得弹窗很烦人吗？\n\
-   那就来试试 AdBlock 吧，还你一个干净清爽的浏览环境！\n\
-   注：如果你想恢复某些广告，请在此处设置：\n\
-   设置 >> Cyber IO >> 从Plum Star公司获得数据
-AdBlock.yes=稍后提醒我
-AdBlock.no=安装
-404NotFound.title=[#e53935]404 页面未找到]
-404NotFound=[#e53935]404 页面未找到[]
-404NotFound.read=退出
+NewBrains=New Brains\u516c\u53f8\u5f15\u9886\u751f\u7269\u5b66\u3001\u836f\u5b66\u548c\u795e\u7ecf\u5b66\u884c\u4e1a\u9876\u6d41\uff0c\u662f\u5b87\u5b99\u4e2d\u6700\u5927\u7684\u516c\u53f8\u4e4b\u4e00\u3002\n\
+\u6b63\u5982\u5176\u540d\uff0c\u4ed6\u4eec\u7ad9\u5728\u4e86\u8111\u79d1\u5b66\u7684\u524d\u6cbf\u4f4d\u7f6e\u4e0a\u3002\n\u4f60\u4eec\u5927\u591a\u6570\u53ef\u80fd\u8fd8\u6ca1\u6709\u6ce8\u610f\u5230\uff0c\u8fd9\u4e5f\u662f\u4ed6\u4eec\u9879\u76ee\u4e2d\u7684\u4e00\u90e8\u5206\u3002
+NewBrains.read=\u6807\u8bb0\u4e3a\u5df2\u8bfb
+AdBlock.title=\u5c4f\u853d\u5e7f\u544a
+AdBlock=\u4f60\u89c9\u5f97\u5f39\u7a97\u5f88\u70e6\u4eba\u5417\uff1f\n\
+   \u90a3\u5c31\u6765\u8bd5\u8bd5 AdBlock \u5427\uff0c\u8fd8\u4f60\u4e00\u4e2a\u5e72\u51c0\u6e05\u723d\u7684\u6d4f\u89c8\u73af\u5883\uff01\n\
+   \u6ce8\uff1a\u5982\u679c\u4f60\u60f3\u6062\u590d\u67d0\u4e9b\u5e7f\u544a\uff0c\u8bf7\u5728\u6b64\u5904\u8bbe\u7f6e\uff1a\n\
+   \u8bbe\u7f6e >> Cyber IO >> \u4ecePlum Star\u516c\u53f8\u83b7\u5f97\u6570\u636e
+AdBlock.yes=\u7a0d\u540e\u63d0\u9192\u6211
+AdBlock.no=\u5b89\u88c5
+404NotFound.title=[#e53935]404 \u9875\u9762\u672a\u627e\u5230]
+404NotFound=[#e53935]404 \u9875\u9762\u672a\u627e\u5230[]
+404NotFound.read=\u9000\u51fa
 OhNo.title=Oh No!
 OhNo=Oh No!
 OhNo.read=Oh No
-RateUs.title=给 Cyber IO 评分
-RateUs=打扰一下，您玩Cyber IO开心吗？\n\
- 请您留下评估以助于我们改进Cyber IO。
-RateUs.submit=提交
-ErekirDetected.title=检测到新行星
-ErekirDetected=最近雷达上显示出了一颗新行星，Plum Star公司决定命名它为“埃里克尔”\n\
- 你的职位已经改变，目前是探索新行星的先锋队。\n\
- 我们会定期给您准备物资飞船，只需要您切换控制台的航线即可。\n\
-  设置 >> Cyber IO >> 特殊内容 >> 埃里克尔
+RateUs.title=\u7ed9 Cyber IO \u8bc4\u5206
+RateUs=\u6253\u6270\u4e00\u4e0b\uff0c\u60a8\u73a9Cyber IO\u5f00\u5fc3\u5417\uff1f\n\
+ \u8bf7\u60a8\u7559\u4e0b\u8bc4\u4f30\u4ee5\u52a9\u4e8e\u6211\u4eec\u6539\u8fdbCyber IO\u3002
+RateUs.submit=\u63d0\u4ea4
+ErekirDetected.title=\u68c0\u6d4b\u5230\u65b0\u884c\u661f
+ErekirDetected=\u6700\u8fd1\u96f7\u8fbe\u4e0a\u663e\u793a\u51fa\u4e86\u4e00\u9897\u65b0\u884c\u661f\uff0cPlum Star\u516c\u53f8\u51b3\u5b9a\u547d\u540d\u5b83\u4e3a\u201c\u57c3\u91cc\u514b\u5c14\u201d\n\
+ \u4f60\u7684\u804c\u4f4d\u5df2\u7ecf\u6539\u53d8\uff0c\u76ee\u524d\u662f\u63a2\u7d22\u65b0\u884c\u661f\u7684\u5148\u950b\u961f\u3002\n\
+ \u6211\u4eec\u4f1a\u5b9a\u671f\u7ed9\u60a8\u51c6\u5907\u7269\u8d44\u98de\u8239\uff0c\u53ea\u9700\u8981\u60a8\u5207\u6362\u63a7\u5236\u53f0\u7684\u822a\u7ebf\u5373\u53ef\u3002\n\
+  \u8bbe\u7f6e >> Cyber IO >> \u7279\u6b8a\u5185\u5bb9 >> \u57c3\u91cc\u514b\u5c14
 ErekirDetected.read=OK
-SetOutErekir.title=向埃里克尔的航线
-SetOutErekir=不能再等了，现在不去，我们的竞争对手就会先我们一步！\n\
- 飞船准备好了，走！
-SetOutErekir.yes=启程
-SetOutErekir.no=继续等候
+SetOutErekir.title=\u5411\u57c3\u91cc\u514b\u5c14\u7684\u822a\u7ebf
+SetOutErekir=\u4e0d\u80fd\u518d\u7b49\u4e86\uff0c\u73b0\u5728\u4e0d\u53bb\uff0c\u6211\u4eec\u7684\u7ade\u4e89\u5bf9\u624b\u5c31\u4f1a\u5148\u6211\u4eec\u4e00\u6b65\uff01\n\
+ \u98de\u8239\u51c6\u5907\u597d\u4e86\uff0c\u8d70\uff01
+SetOutErekir.yes=\u542f\u7a0b
+SetOutErekir.no=\u7ee7\u7eed\u7b49\u5019
