Added v4.1 release message.

--- a/assets/welcomes/zh_CN.properties
+++ b/assets/welcomes/zh_CN.properties
@@ -5,75 +5,75 @@ Default=If you saw this page, it might mean you are using the CyberIO for test o
 Default.read=I see
 #---Do not translate---
 #Standard
-welcome=欢迎游玩 Cyber IO {0}.
+welcome=\u6B22\u8FCE\u6E38\u73A9 Cyber IO {0}.
 Discord.title=Discord
-Discord=有时，当你独自漫步太空，可能会想寻找一个社区团队\n\
-你可以分享你的经验或者问些问题（当然你用不着问bug）。\n\
-尽管“飞声”信号不好，世界上仍然有人在惦记着你——Plum Star的Discord。\n\
-加入我们，分享你的际遇，坦露你的疑问吧！
+Discord=\u6709\u65F6\uFF0C\u5F53\u4F60\u72EC\u81EA\u6F2B\u6B65\u592A\u7A7A\uFF0C\u53EF\u80FD\u4F1A\u60F3\u5BFB\u627E\u4E00\u4E2A\u793E\u533A\u56E2\u961F\n\
+\u4F60\u53EF\u4EE5\u5206\u4EAB\u4F60\u7684\u7ECF\u9A8C\u6216\u8005\u95EE\u4E9B\u95EE\u9898\uFF08\u5F53\u7136\u4F60\u7528\u4E0D\u7740\u95EEbug\uFF09\u3002\n\
+\u5C3D\u7BA1\u201C\u98DE\u58F0\u201D\u4FE1\u53F7\u4E0D\u597D\uFF0C\u4E16\u754C\u4E0A\u4ECD\u7136\u6709\u4EBA\u5728\u60E6\u8BB0\u7740\u4F60\u2014\u2014Plum Star\u7684Discord\u3002\n\
+\u52A0\u5165\u6211\u4EEC\uFF0C\u5206\u4EAB\u4F60\u7684\u9645\u9047\uFF0C\u5766\u9732\u4F60\u7684\u7591\u95EE\u5427\uFF01
 Discord.link=https://discord.gg/PDwyxM3waw
-Discord.yes=打开链接
-Discord.no=标记为垃圾内容
-UpdateECHO.title=更新“飞声”
-UpdateECHO=News: 最近，“飞声”终端推出了新版本{0}。\n\
-  你可以点击下面的按钮更新你的终端
-UpdateECHO.button-a=更新
-UpdateECHO.button-b=以后提醒我
-UpdateECHO.button-c=不再显示
-UpdateECHO.break-update-warning=警告：最新版本的更新已损坏，可能会导致存档错误。请务必谨慎！
+Discord.yes=[accent]\u6253\u5F00\u94FE\u63A5[]
+Discord.no=\u6807\u8BB0\u4E3A\u5783\u573E\u5185\u5BB9
+UpdateECHO.title=\u66F4\u65B0\u201C\u98DE\u58F0\u201D
+UpdateECHO=News: \u6700\u8FD1\uFF0C\u201C\u98DE\u58F0\u201D\u7EC8\u7AEF\u63A8\u51FA\u4E86\u65B0\u7248\u672C{0}\u3002\n\
+  \u4F60\u53EF\u4EE5\u70B9\u51FB\u4E0B\u9762\u7684\u6309\u94AE\u66F4\u65B0\u4F60\u7684\u7EC8\u7AEF
+UpdateECHO.button-a=[accent]\u66F4\u65B0[]
+UpdateECHO.button-b=\u4EE5\u540E\u63D0\u9192\u6211
+UpdateECHO.button-c=\u4E0D\u518D\u663E\u793A
+UpdateECHO.break-update-warning=\u8B66\u544A\uFF1A\u6700\u65B0\u7248\u672C\u7684\u66F4\u65B0\u5DF2\u635F\u574F\uFF0C\u53EF\u80FD\u4F1A\u5BFC\u81F4\u5B58\u6863\u9519\u8BEF\u3002\u8BF7\u52A1\u5FC5\u8C28\u614E\uFF01
 #v2
-EmploymentVerification.title=验证雇佣状态
-EmploymentVerification=欢迎就职于Plum Star公司，祝你享受于崭新的全部赛博学科技！\n\
-但你可能会很烦恼，因为你需要干连接设备这种令人厌倦的工作。\n\
-无论如何，祝你好运！
-EmploymentVerification.read=加入！
+EmploymentVerification.title=\u9A8C\u8BC1\u96C7\u4F63\u72B6\u6001
+EmploymentVerification=\u6B22\u8FCE\u5C31\u804C\u4E8EPlum Star\u516C\u53F8\uFF0C\u795D\u4F60\u4EAB\u53D7\u4E8E\u5D2D\u65B0\u7684\u5168\u90E8\u8D5B\u535A\u5B66\u79D1\u6280\uFF01\n\
+\u4F46\u4F60\u53EF\u80FD\u4F1A\u5F88\u70E6\u607C\uFF0C\u56E0\u4E3A\u4F60\u9700\u8981\u5E72\u8FDE\u63A5\u8BBE\u5907\u8FD9\u79CD\u4EE4\u4EBA\u538C\u5026\u7684\u5DE5\u4F5C\u3002\n\
+\u65E0\u8BBA\u5982\u4F55\uFF0C\u795D\u4F60\u597D\u8FD0\uFF01
+EmploymentVerification.read=\u52A0\u5165\uFF01
 #v3
-ResearchProject.title=研究计划
-ResearchProject=早上好，新来的！自从之前坐你位子的员工按下暂停键后（嗯……物理层面上的），\n\
-全息项目（holo-proj）停了好长一段时间。\n\
-但好消息是是，现在这个项目已经移交到了你的手上，大善人，现在赶紧回去工作吧！
-ResearchProject.read=做工
-TheSHIP.title=“棱船”
-TheSHIP=想象你正身处一望无际的太空，什么东西对你而言是最重要的？毫无疑问，是太空飞船\n\
-最好最明智的选择正是“棱船”，由Plum Star公司出品，\n 基于核聚变能源控制和最新的奥罗博罗斯操作系统（质量保障）。\n\
-商品编号：111_1111_11_1001\n\
-注：“飞声”已经通过
-TheSHIP.read=标记为垃圾内容
-ECHO.title=“飞声”
-ECHO=为了处理在行星上数种物种与工具之间交流的障碍，“飞声”被发明了出来。\n\
-它提供了一种简单的方法来与彼此交互，只需要轻轻一点。\n\
-另外，“飞声”在终端存储了 cookie 以使您的体验更加舒适。\n\
-关于“飞声”在终端使用 cookie 的更多信息，请参见于[#e53935]*404 Not Found*[]。
-ECHO.read=通过
+ResearchProject.title=\u7814\u7A76\u8BA1\u5212
+ResearchProject=\u65E9\u4E0A\u597D\uFF0C\u65B0\u6765\u7684\uFF01\u81EA\u4ECE\u4E4B\u524D\u5750\u4F60\u4F4D\u5B50\u7684\u5458\u5DE5\u6309\u4E0B\u6682\u505C\u952E\u540E\uFF08\u55EF\u2026\u2026\u7269\u7406\u5C42\u9762\u4E0A\u7684\uFF09\uFF0C\n\
+\u5168\u606F\u9879\u76EE\uFF08holo-proj\uFF09\u505C\u4E86\u597D\u957F\u4E00\u6BB5\u65F6\u95F4\u3002\n\
+\u4F46\u597D\u6D88\u606F\u662F\u662F\uFF0C\u73B0\u5728\u8FD9\u4E2A\u9879\u76EE\u5DF2\u7ECF\u79FB\u4EA4\u5230\u4E86\u4F60\u7684\u624B\u4E0A\uFF0C\u5927\u5584\u4EBA\uFF0C\u73B0\u5728\u8D76\u7D27\u56DE\u53BB\u5DE5\u4F5C\u5427\uFF01
+ResearchProject.read=\u505A\u5DE5
+TheSHIP.title=\u201C\u68F1\u8239\u201D
+TheSHIP=\u60F3\u8C61\u4F60\u6B63\u8EAB\u5904\u4E00\u671B\u65E0\u9645\u7684\u592A\u7A7A\uFF0C\u4EC0\u4E48\u4E1C\u897F\u5BF9\u4F60\u800C\u8A00\u662F\u6700\u91CD\u8981\u7684\uFF1F\u6BEB\u65E0\u7591\u95EE\uFF0C\u662F\u592A\u7A7A\u98DE\u8239\n\
+\u6700\u597D\u6700\u660E\u667A\u7684\u9009\u62E9\u6B63\u662F\u201C\u68F1\u8239\u201D\uFF0C\u7531Plum Star\u516C\u53F8\u51FA\u54C1\uFF0C\n \u57FA\u4E8E\u6838\u805A\u53D8\u80FD\u6E90\u63A7\u5236\u548C\u6700\u65B0\u7684\u5965\u7F57\u535A\u7F57\u65AF\u64CD\u4F5C\u7CFB\u7EDF\uFF08\u8D28\u91CF\u4FDD\u969C\uFF09\u3002\n\
+\u5546\u54C1\u7F16\u53F7\uFF1A111_1111_11_1001\n\
+\u6CE8\uFF1A\u201C\u98DE\u58F0\u201D\u5DF2\u7ECF\u901A\u8FC7
+TheSHIP.read=\u6807\u8BB0\u4E3A\u5783\u573E\u5185\u5BB9
+ECHO.title=\u201C\u98DE\u58F0\u201D
+ECHO=\u4E3A\u4E86\u5904\u7406\u5728\u884C\u661F\u4E0A\u6570\u79CD\u7269\u79CD\u4E0E\u5DE5\u5177\u4E4B\u95F4\u4EA4\u6D41\u7684\u969C\u788D\uFF0C\u201C\u98DE\u58F0\u201D\u88AB\u53D1\u660E\u4E86\u51FA\u6765\u3002\n\
+\u5B83\u63D0\u4F9B\u4E86\u4E00\u79CD\u7B80\u5355\u7684\u65B9\u6CD5\u6765\u4E0E\u5F7C\u6B64\u4EA4\u4E92\uFF0C\u53EA\u9700\u8981\u8F7B\u8F7B\u4E00\u70B9\u3002\n\
+\u53E6\u5916\uFF0C\u201C\u98DE\u58F0\u201D\u5728\u7EC8\u7AEF\u5B58\u50A8\u4E86 cookie \u4EE5\u4F7F\u60A8\u7684\u4F53\u9A8C\u66F4\u52A0\u8212\u9002\u3002\n\
+\u5173\u4E8E\u201C\u98DE\u58F0\u201D\u5728\u7EC8\u7AEF\u4F7F\u7528 cookie \u7684\u66F4\u591A\u4FE1\u606F\uFF0C\u8BF7\u53C2\u89C1\u4E8E[#e53935]*404 Not Found*[]\u3002
+ECHO.read=\u901A\u8FC7
 NewBrains.title=New Brains
-NewBrains=New Brains公司引领生物学、药学和神经学行业顶流，是宇宙中最大的公司之一。\n\
-正如其名，他们站在了脑科学的前沿位置上。\n你们大多数可能还没有注意到，这也是他们项目中的一部分。
-NewBrains.read=标记为已读
-AdBlock.title=屏蔽广告
-AdBlock=你觉得弹窗很烦人吗？\n\
-   那就来试试 AdBlock 吧，还你一个干净清爽的浏览环境！\n\
-   注：如果你想恢复某些广告，请在此处设置：\n\
-   设置 >> Cyber IO >> 从Plum Star公司获得数据
-AdBlock.yes=稍后提醒我
-AdBlock.no=安装
-404NotFound.title=[#e53935]404 页面未找到]
-404NotFound=[#e53935]404 页面未找到[]
-404NotFound.read=退出
+NewBrains=New Brains\u516C\u53F8\u5F15\u9886\u751F\u7269\u5B66\u3001\u836F\u5B66\u548C\u795E\u7ECF\u5B66\u884C\u4E1A\u9876\u6D41\uFF0C\u662F\u5B87\u5B99\u4E2D\u6700\u5927\u7684\u516C\u53F8\u4E4B\u4E00\u3002\n\
+\u6B63\u5982\u5176\u540D\uFF0C\u4ED6\u4EEC\u7AD9\u5728\u4E86\u8111\u79D1\u5B66\u7684\u524D\u6CBF\u4F4D\u7F6E\u4E0A\u3002\n\u4F60\u4EEC\u5927\u591A\u6570\u53EF\u80FD\u8FD8\u6CA1\u6709\u6CE8\u610F\u5230\uFF0C\u8FD9\u4E5F\u662F\u4ED6\u4EEC\u9879\u76EE\u4E2D\u7684\u4E00\u90E8\u5206\u3002
+NewBrains.read=\u6807\u8BB0\u4E3A\u5DF2\u8BFB
+AdBlock.title=\u5C4F\u853D\u5E7F\u544A
+AdBlock=\u4F60\u89C9\u5F97\u5F39\u7A97\u5F88\u70E6\u4EBA\u5417\uFF1F\n\
+   \u90A3\u5C31\u6765\u8BD5\u8BD5 AdBlock \u5427\uFF0C\u8FD8\u4F60\u4E00\u4E2A\u5E72\u51C0\u6E05\u723D\u7684\u6D4F\u89C8\u73AF\u5883\uFF01\n\
+   \u6CE8\uFF1A\u5982\u679C\u4F60\u60F3\u6062\u590D\u67D0\u4E9B\u5E7F\u544A\uFF0C\u8BF7\u5728\u6B64\u5904\u8BBE\u7F6E\uFF1A\n\
+   \u8BBE\u7F6E >> Cyber IO >> \u4ECEPlum Star\u516C\u53F8\u83B7\u5F97\u6570\u636E
+AdBlock.yes=[accent]\u7A0D\u540E\u63D0\u9192\u6211[]
+AdBlock.no=\u5B89\u88C5
+404NotFound.title=[#e53935]404 \u9875\u9762\u672A\u627E\u5230]
+404NotFound=[#e53935]404 \u9875\u9762\u672A\u627E\u5230[]
+404NotFound.read=\u9000\u51FA
 OhNo.title=Oh No!
 OhNo=Oh No!
 OhNo.read=Oh No
-RateUs.title=给 Cyber IO 评分
-RateUs=打扰一下，您玩Cyber IO开心吗？\n\
- 请您留下评估以助于我们改进Cyber IO。
-RateUs.submit=提交
-ErekirDetected.title=检测到新行星
-ErekirDetected=最近雷达上显示出了一颗新行星，Plum Star公司决定命名它为“埃里克尔”\n\
- 你的职位已经改变，目前是探索新行星的先锋队。\n\
- 我们会定期给您准备物资飞船，只需要您切换控制台的航线即可。\n\
-  设置 >> Cyber IO >> 特殊内容 >> 埃里克尔
+RateUs.title=\u7ED9 Cyber IO \u8BC4\u5206
+RateUs=\u6253\u6270\u4E00\u4E0B\uFF0C\u60A8\u73A9Cyber IO\u5F00\u5FC3\u5417\uFF1F\n\
+ \u8BF7\u60A8\u7559\u4E0B\u8BC4\u4F30\u4EE5\u52A9\u4E8E\u6211\u4EEC\u6539\u8FDBCyber IO\u3002
+RateUs.submit=\u63D0\u4EA4
+ErekirDetected.title=\u68C0\u6D4B\u5230\u65B0\u884C\u661F
+ErekirDetected=\u6700\u8FD1\u96F7\u8FBE\u4E0A\u663E\u793A\u51FA\u4E86\u4E00\u9897\u65B0\u884C\u661F\uFF0CPlum Star\u516C\u53F8\u51B3\u5B9A\u547D\u540D\u5B83\u4E3A\u201C\u57C3\u91CC\u514B\u5C14\u201D\n\
+ \u4F60\u7684\u804C\u4F4D\u5DF2\u7ECF\u6539\u53D8\uFF0C\u76EE\u524D\u662F\u63A2\u7D22\u65B0\u884C\u661F\u7684\u5148\u950B\u961F\u3002\n\
+ \u6211\u4EEC\u4F1A\u5B9A\u671F\u7ED9\u60A8\u51C6\u5907\u7269\u8D44\u98DE\u8239\uFF0C\u53EA\u9700\u8981\u60A8\u5207\u6362\u63A7\u5236\u53F0\u7684\u822A\u7EBF\u5373\u53EF\u3002\n\
+  Main Menu >> Cyber IO >> \u7279\u6B8A\u5185\u5BB9 >> \u57C3\u91CC\u514B\u5C14
 ErekirDetected.read=OK
-SetOutErekir.title=向埃里克尔的航线
-SetOutErekir=不能再等了，现在不去，我们的竞争对手就会先我们一步！\n\
- 飞船准备好了，走！
-SetOutErekir.yes=启程
-SetOutErekir.no=继续等候
+SetOutErekir.title=\u5411\u57C3\u91CC\u514B\u5C14\u7684\u822A\u7EBF
+SetOutErekir=\u4E0D\u80FD\u518D\u7B49\u4E86\uFF0C\u73B0\u5728\u4E0D\u53BB\uFF0C\u6211\u4EEC\u7684\u7ADE\u4E89\u5BF9\u624B\u5C31\u4F1A\u5148\u6211\u4EEC\u4E00\u6B65\uFF01\n\
+ \u98DE\u8239\u51C6\u5907\u597D\u4E86\uFF0C\u8D70\uFF01
+SetOutErekir.yes=[accent]\u542F\u7A0B[]
+SetOutErekir.no=\u7EE7\u7EED\u7B49\u5019
