--- a/Info/ReleaseMessage/v4.1.md
+++ b/Info/ReleaseMessage/v4.1.md
@@ -1,11 +1,10 @@
 ### Changes
 - A new techtree of Cyber IO was added.
-- CyberIO for Erekir has been balanced.
+- Cyber IO has been balanced.
 - Bug fix.
 - Better visual effects.
 - It's getting weirder.
 
 ### Warnings
 - The last version supports Mindustry v136.
-- There is still a bad gameplay on Serpulo.
 - Do not touch any block.
