--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -1,3 +1,5 @@
+#TechTree
+techtree.cyber-io=Cyber IO
 # Blocks
 block.cyber-io-ic-machine.name=Верстат для мікросхем
 block.cyber-io-ic-machine.description=Верстат, що виробляє чипи.
@@ -186,10 +188,15 @@ setting.cyber-io-connection-density.name=Щільність з'єднання
 setting.cyber-io-connection-density.description=Щільність стрілки між відправником і отримувачем.
 setting.cyber-io-connection-size.name=Розмір з'єднувальної стрілки
 setting.cyber-io-connection-size.description=Розмір стрілки між відправником і отримувачем.
+setting.cyber-io-connection-bloom.name=Світіння стрілки підключення
+setting.cyber-io-connection-animation-speed.name=Швидкість анімації підключення
+setting.cyber-io-connection-animation-speed.description=Швидкість анімації з'єднання між відправником і одержувачем.
 setting.cyber-io-show-link-circle.name=Показати коло з'єднань
 setting.cyber-io-show-link-circle.description=Якщо увімкнено, то показується коло навколо отримувача і відправника.
 setting.cyber-io-always-show-link.name=Завжди показувати з'єднання
 setting.cyber-io-always-show-link.description=Якщо увімкнено, то стрілка завжди показує, коли блоки з'єднані.
+setting.cyber-io-show-wireless-tower-circle.name=Показати кола бездротової вежі
+setting.cyber-io-show-wireless-tower-circle.description=Чи з’являтиметься нескінченні кола
 setting.cyber-io-show-welcome.name=Отримувати повідомлення від «Плюм Стар Інкорпорейшн»
 setting.cyber-io-show-welcome.description=Якщо увімкнено, то з'являється текст при запуску гри.
 setting.cyber-io-show-update.name=Показувати сповіщення про оновлення CyberIO
@@ -203,8 +210,10 @@ setting.cyber-io-content-specific.button-tip=Виберіть специфічн
 setting.cyber-io-content-specific.title=Специфічний вміст
 setting.cyber-io-content-specific.restart=Перемкнено на «{0}» успішно. Перезапустіть гру для перезавантаження всього вмісту.
 setting.cyber-io-content-specific.introduction=Виберіть специфічний вміст Cyber IO для завантаження
+setting.cyber-io-content-specific.saves-warning=ПРИМІТКА: збереження з Cyber IO не можна поширювати між різними версіями.
 setting.cyber-io-content-specific.switch-to=Ви перемкнулися на «{0}»
 setting.cyber-io-content-specific.switch-back=Ви перемкнулися назад на «{0}»
+setting.cyber-io-content-specific.require-restart=Потрібен перезапуск.
 setting.cyber-io-advanced-function.title=Додаткові функції
 # Advanced Function
 advanced.cyber-io.github-mirror.button=Дзеркало GitHub
@@ -220,9 +229,9 @@ advanced.cyber-io.map-cleaner=Очищувач мапи
 advanced.cyber-io.map-cleaner.description=Увімкнувши «очищувач мапи», ви знайдете спеціальну кнопку під назвою «Очищувач мапи» у меню налаштувань під час гри на локальній мапі. Натисніть кнопку, тоді весь вміст Cyber IO на цій карті буде очищено.
 # Content Specific
 cyber-io.spec.vanilla.name=Ваніль
-cyber-io.spec.vanilla.desc=Грайте у ванільну Mindustry з Cyber IO. Потрібен перезапуск.
+cyber-io.spec.vanilla.desc=Грайте у ванільну Mindustry з Cyber IO.
 cyber-io.spec.erekir.name=Ерекір
-cyber-io.spec.erekir.desc=Грайте з Cyber IO на Ерекіре. Потрібен перезапуск.
+cyber-io.spec.erekir.desc=Грайте з Cyber IO на Ерекірі.
 # Heimdall
 heimdall.damage.name=Шкода
 heimdall.damage.description=Яку шкоду може завдати мозкова хвиля
