土豆太君的译

--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -33,10 +33,10 @@ block.cyber-io-prism-obelisk.name=\u65B9\u5C16\u7891
 block.cyber-io-prism-obelisk.description=\u6B63\u5728\u76EF\u8457\u4F60\u54E6\u3002
 block.cyber-io-smart-distributor.name=\u667A\u80FD\u914D\u9001\u5668
 block.cyber-io-smart-distributor.description=\u4E00\u9375\u9023\u63A5\uFF0C\u914D\u9001\u60A8\u7684\u7269\u54C1\uFF0C\u6E96\u6642\u5230\u9054\u3002
-block.cyber-io-smart-distributor.stats.power-use=Based on the number of items required.
+block.cyber-io-smart-distributor.stats.power-use=\u53D6\u6C7A\u65BC\u6240\u9700\u8981\u7684\u7269\u54C1\u6578\u76EE\u3002\uE4CE\uE4CE\uE4CE
 block.cyber-io-smart-unloader.name=\u667A\u80FD\u88DD\u8F09\u5668
 block.cyber-io-smart-unloader.description=\u5F9E\u5468\u570D\u7684\u65B9\u584A\u4E2D\u5378\u8F09\u6240\u9700\u8981\u7684\u7269\u54C1\uFF0C\u9001\u81F3\u9023\u63A5\u9EDE\u3002
-block.cyber-io-smart-unloader.stats.power-use=Based on the number of connections and items required.
+block.cyber-io-smart-unloader.stats.power-use=\u53D6\u6C7A\u65BC\u6240\u9700\u8981\u7684\u93C8\u63A5\u6578\u76EE\u8207\u7269\u54C1\u6578\u76EE\u6C7A\u5B9A.
 block.cyber-io-stream-client.name=\u6D41\u9AD4\u5BA2\u6236\u7AEF
 block.cyber-io-stream-client.description=\u5206\u914D\u6D41\u9AD4\uFF0C\u53D7\u5230\u7DB2\u7D61\u901F\u5EA6\u9650\u5236.
 block.cyber-io-stream-host.name=\u4E32\u6D41\u5668
@@ -45,45 +45,45 @@ block.cyber-io-stream-server.name=\u6D41\u9AD4\u4F3A\u670D\u5668
 block.cyber-io-stream-server.description=\u901A\u904E\u7DB2\u7D61\u5206\u4EAB\u5404\u7A2E\u4E32\u6D41\u5A92\u9AD4\uFF0C\u6211\u611B\u50CF\u7D20\u5DE5\u5EE0\uFF01
 block.cyber-io-jammer.name=\u5E72\u64FE\u6A5F
 block.cyber-io-jammer.description=\u5E72\u64FE\u5668\u3002\u8B66\u544A\uFF01\u624B\u6A5F\u82B1\u5C4F\u8ACB\u7ACB\u5373\u95DC\u6A5F\uFF01
-block.cyber-io-cyberion-mixer.name=Cyberion Mixer
-block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but it does work.
-block.cyber-io-holo-projector.name=Holo Projector
-block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
-block.cyber-io-stealth.name=Stealth
-block.cyber-io-stealth.description=******Permission Denied*******
-block.cyber-io-aqua-cyberion.name=Cyberion
-block.cyber-io-aqua-cyberion.description=A common liquid.
-block.cyber-io-wireless-tower.name=Wireless Tower
-block.cyber-io-wireless-tower.details=Powered by Plum Star Inc. literally.
-block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
-block.cyber-io-data-miner.name=Data Miner
-block.cyber-io-data-miner.description=Extract the real mineral by AI. If you find this, oh, you reserved this block.
-block.cyber-io-heimdall.name=Heimdall
-block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interface and neural network, can totally change the enemy's mindset.
-block.cyber-io-heimdall.details=The artifact of New Brains Crop.
-block.cyber-io-heimdall-eye.name=Eye of Heimdall
-block.cyber-io-heimdall-eye.description=A detachable component, designed for heimdall improvement, can stare at anyone that it considers as an enemy.
-block.cyber-io-heimdall-eye.details=The upgrade component developed by New Brains Crop.
-block.cyber-io-heimdall-ear.name=Ear of Heimdall
-block.cyber-io-heimdall-ear.description=A sonic sensor, designed for heimdall upgrade, can detect the vibration of enemy and realize the sonic wave by mind power.
-block.cyber-io-heimdall-ear.details=The upgrade component developed by New Brains Crop.
+block.cyber-io-cyberion-mixer.name=\u8CFD\u535A\u6DB2\u9AD4\u6DF7\u5408\u5668
+block.cyber-io-cyberion-mixer.description=\u8AB0\u4E5F\u4E0D\u77E5\u9053\u5B83\u5DE5\u4F5C\u7684\u539F\u7406\u3002
+block.cyber-io-holo-projector.name=\u5168\u606F\u6295\u5F71\u5100
+block.cyber-io-holo-projector.description=\u4F7F\u7528\u8CFD\u535A\u6DB2\u9AD4\u69CB\u5EFA\u5168\u606F\u55AE\u4F4D\u3002
+block.cyber-io-stealth.name=\u9041\u5F62
+block.cyber-io-stealth.description=******\u62D2\u7D55\u8A2A\u554F*******
+block.cyber-io-aqua-cyberion.name=\u8CFD\u535A\u6DB2\u9AD4
+block.cyber-io-aqua-cyberion.description=\u666E\u666E\u901A\u901A\u7684\u6DB2\u9AD4\u3002
+block.cyber-io-wireless-tower.name=\u7121\u7DDA\u5854
+block.cyber-io-wireless-tower.details=\u70BA\u96FB\u6C60\u5145\u96FB\uFF0C\u8ACB\u7262\u8A18\u96FB\u96E2\u8F3B\u5C04\u5C0D\u65BC\u4F60\u7684\u6A5F\u8EAB\u7121\u5BB3\u3002
+block.cyber-io-wireless-tower.stats.power-use=\u53D6\u6C7A\u65BC\u6240\u4F7F\u7528\u7684\u96FB\u529B\u3002
+block.cyber-io-data-miner.name=\u6578\u64DA\u7926\u5DE5
+block.cyber-io-data-miner.description=\u4F7F\u7528AI\u63D0\u53D6\u771F\u6B63\u7684\u7926\u7269\uFF0C\u627E\u5230\u5C31\u5C6C\u65BC\u4F60\uFF0C\u4E0D\u904E\u90A3\u672C\u4F86\u5C31\u662F\u70BA\u4F60\u9810\u7559\u7684\u3002
+block.cyber-io-heimdall.name=\u6D77\u59C6\u9054\u723E
+block.cyber-io-heimdall.description=\u751F\u7269\u79D1\u6280\u3001\u8166\u79D1\u6280\u8207\u7269\u806F\u7DB2\u7684\u7D50\u5408\u9AD4\uFF0C\u4F7F\u7528\u8166\u6A5F\u63A5\u53E3\u548C\u795E\u7D93\u7DB2\u8DEF\u6A21\u64EC\uFF0C\u53EF\u4EE5\u6539\u8B8A\u6575\u4EBA\u7684\u601D\u7DAD\u3002
+block.cyber-io-heimdall.details=New Brains \u516C\u53F8\u7684\u8A08\u5283.
+block.cyber-io-heimdall-eye.name=\u6D77\u59C6\u9054\u723E\u4E4B\u773C
+block.cyber-io-heimdall-eye.description=\u53EF\u4EE5\u62C6\u5378\u7684\u7D44\u4EF6\uFF0C\u7528\u65BC\u5347\u7D1A\u6D77\u59C6\u9054\u723E\uFF0C\u6CE8\u8996\u8457\u5B83\u8A8D\u70BA\u662F\u6575\u4EBA\u7684\u4E8B\u7269.
+block.cyber-io-heimdall-eye.details=\u5347\u7D1A\u7D44\u4EF6\u7531New Brains \u516C\u53F8\u958B\u767C.
+block.cyber-io-heimdall-ear.name=\u6D77\u59C6\u9054\u723E\u4E4B\u8033
+block.cyber-io-heimdall-ear.description=\u8072\u97F3\u50B3\u611F\u5668\uFF0C\u7528\u65BC\u5347\u7D1A\u6D77\u59C6\u9054\u723E\uFF0C\u76E3\u6E2C\u6575\u4EBA\u9707\u52D5\u4E26\u7528\u8166\u96FB\u6CE2\u7372\u53D6\u8072\u6CE2.
+block.cyber-io-heimdall-ear.details=\u5347\u7D1A\u7D44\u4EF6\u7531New Brains \u516C\u53F8\u958B\u767C.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
 # Liquids
-liquid.cyber-io-cyberion.name=Cyberion
-liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but no one knows how it does work.
+liquid.cyber-io-cyberion.name=\u8CFD\u535A\u6DB2\u9AD4
+liquid.cyber-io-cyberion.description=\u7531Plum Star \u516C\u53F8\u958B\u767C\u7684\u6602\u8CB4\u6DB2\u9AD4\uFF0C\u5C6C\u6027\u4ECD\u7136\u4E0D\u660E.
 # Units
-unit.cyber-io-holo-miner.name=Holo Miner
-unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
-unit.cyber-io-holo-fighter.name=Holo Fighter
-unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
-unit.cyber-io-holo-guardian.name=Holo Guardian
-unit.cyber-io-holo-guardian.description=A guardian projected by Holo Projector, but risk on its neck.
-unit.cyber-io-holo-architect.name=Holo Architect
-unit.cyber-io-holo-architect.description=A builder projected by Holo Projector, but it isn't built.
-unit.cyber-io-holo-supporter.name=Holo Supporter
-unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, but it can't save itself.
+unit.cyber-io-holo-miner.name=\u5168\u606F\u6316\u7926\u6A5F
+unit.cyber-io-holo-miner.description=\u5168\u606F\u6295\u5F71\u5668\u69CB\u5EFA\u7684\u77ED\u58FD\u547D\u5DE5\u8702.
+unit.cyber-io-holo-fighter.name=\u5168\u606F\u6230\u9B25\u6A5F
+unit.cyber-io-holo-fighter.description=\u7531\u5168\u606F\u6295\u5F71\u5668\u69CB\u5EFA\uFF0C\u66AB\u6642\u5E6B\u52A9\u4F60\u6230\u9B25\u7684\u6253\u624B.
+unit.cyber-io-holo-guardian.name=\u5168\u606F\u9632\u79A6\u6A5F
+unit.cyber-io-holo-guardian.description=\u7531\u5168\u606F\u6295\u5F71\u5668\u69CB\u5EFA\uFF0C\u7528\u65BC\u4FDD\u8B77Plum Star Inc\uFF0C\u76E1\u8077\u76E1\u8CAC\uFF0C\u81F3\u6B7B\u4E0D\u6094\u3002
+unit.cyber-io-holo-architect.name=\u5168\u606F\u5EFA\u9020\u6A5F
+unit.cyber-io-holo-architect.description=\u5168\u606F\u6295\u5F71\u5668\u69CB\u5EFA\u7684\u5EFA\u7BC9\u5DE5\uFF0C\u4F46\u5B83\u4E0D\u662F\u88AB\u5EFA\u9020\u51FA\u4F86\u7684.
+unit.cyber-io-holo-supporter.name=\u5168\u606F\u8F14\u52A9\u6A5F
+unit.cyber-io-holo-supporter.description=\u5168\u606F\u6295\u5F71\u5668\u69CB\u5EFA\u7684\u8F14\u52A9\u5668\uFF0C\u5B83\u8981\u600E\u9EBC\u5E6B\u81EA\u5DF1.
 #Bars
 bar.cyber-io.generation={0} \u4EE3
 bar.cyber-io.slow-down=\u904B\u8F49\u901F\u5EA6\uFF1A-{0}%
@@ -103,16 +103,16 @@ bar.cyber-io.sender=\u767C\u9001\u7AEF
 bar.cyber-io.null=\u7A7A
 bar.cyber-io.client=\u5BA2\u6236\u7AEF
 bar.cyber-io.host=\u4E32\u6D41\u5668
-bar.cyber-io.rest-life=Rest Life
-bar.cyber-io.rest-life.figure=Rest Life: {0}s
-bar.cyber-io.rest-resurrect=Rest Life: {0} times
+bar.cyber-io.rest-life=\u5269\u9918\u58FD\u547D
+bar.cyber-io.rest-life.figure=\u5269\u9918\u58FD\u547D: {0}s
+bar.cyber-io.rest-resurrect=\u5269\u9918\u5FA9\u6D3B\u6642\u9593: {0} times
 # Bundles
-cyber-io.cost.second=sec
-cyber-io.cost.minute=min
-cyber-io.speed-increase.range=from {0}% to {1}%
+cyber-io.cost.second=\u79D2
+cyber-io.cost.minute=\u5206\u9418
+cyber-io.speed-increase.range=\u5F9E {0}% \u5230 {1}%
 # Controls
-control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
-control.cyber-io.update-mod.failed=Failed to update CyberIO because {0}.
+control.cyber-io.update-mod.success=CyberIO {0}\u5DF2\u7D93\u66F4\u65B0\u6210\u529F\uFF0C\u8ACB\u91CD\u65B0\u555F\u52D5\u904A\u6232\u4EE5\u52A0\u8F09CyberIO.
+control.cyber-io.update-mod.failed=\u672A\u80FD\u66F4\u65B0CyberIO\uFF0C\u56E0\u70BA{0}.
 # StatusEffects
 status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6A19\u6703\u6839\u64DA\u6700\u5927\u751F\u547D\u503C\u4F86\u53D7\u5230\u50B7\u5BB3\u3002
@@ -121,26 +121,26 @@ status.cyber-io-vulnerable.description=\u7576\u5FC3\u9EDE\uFF01\u4ED6\u5011\u96A
 status.cyber-io-static.name=\u5E72\u64FE
 status.cyber-io-static.description=\u8B66\u544A\uFF01\u53D7\u5230\u4FE1\u865F\u5E72\u64FE\u653B\u64CA\uFF01
 # Abilities
-Ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuating over time.
-ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force field.
+Ability.cyber-io-holo=\u4F7F\u7528\u8CFD\u535A\u6DB2\u9AD4\u69CB\u5EFA\u7684\u5168\u606F\u55AE\u4F4D\u6703\u96A8\u8457\u6642\u9593\u8870\u6E1B.
+ability.cyber-io-holo-force-field=\u69CB\u5EFA\u81EA\u52D5\u91CD\u751F\u7684\u5168\u606F\u7ACB\u5834\u58BB.
 # \u8A2D\u7F6E
 setting.cyber-io-connection-opacity.name=\u9023\u63A5\u4E0D\u900F\u660E\u5EA6
-setting.cyber-io-connection-density.name=Connection Density
-setting.cyber-io-connection-size.name=Connection Arrow Size
-setting.cyber-io-show-link-circle.name=Show Connection Circle
-setting.cyber-io-always-show-link.name=Always Show Connection
-setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
-setting.cyber-io-show-update.name=Show CyberIO Update Notification
+setting.cyber-io-connection-density.name=\u767C\u9001\u7AEF\u548C\u63A5\u6536\u7AEF\u4E4B\u9593\u7684\u7BAD\u982D\u4E0D\u900F\u660E\u5EA6
+setting.cyber-io-connection-size.name=\u7BAD\u982D\u9023\u63A5\u5BC6\u5EA6
+setting.cyber-io-show-link-circle.name=\u986F\u793A\u9023\u63A5\u5708
+setting.cyber-io-always-show-link.name=\u7E3D\u662F\u986F\u793A\u9023\u63A5
+setting.cyber-io-show-welcome.name=\u4F86\u81EAPlum Star Inc\u7684\u8A0A\u606F.
+setting.cyber-io-show-update.name=\u986F\u793ACyberIO\u7684\u66F4\u65B0\u8A0A\u606F
 # Extra Settings
 # Heimdall
-heimdall.damage.name=Damage
-heimdall.range.name=Range
-heimdall.wave-speed.name=Wave Speed
-heimdall.wave-width.name=Wave Width
-heimdall.reload-time.name=Reload
-heimdall.max-brain-wave-num.name=Wave Number
-heimdall.control-line.name=Control
-heimdall.force-field-max.name=Shield
-heimdall.force-field-regen.name=Shield Regeneration
-heimdall.force-field-radius.name=Shield Range
-heimdall.force-field-restore-time.name=Shield Reload
+heimdall.damage.name=\u50B7\u5BB3
+heimdall.range.name=\u7BC4\u570D
+heimdall.wave-speed.name=\u6CE2\u901F
+heimdall.wave-width.name=\u6CE2\u5BEC
+heimdall.reload-time.name=\u51B7\u537B\u6642\u9593
+heimdall.max-brain-wave-num.name=\u5169\u6B21\u8166\u96FB\u6CE2\u7684\u6642\u9593\u9593\u9694
+heimdall.control-line.name=\u63A7\u5236
+heimdall.force-field-max.name=\u8B77\u76FE
+heimdall.force-field-regen.name=\u8B77\u76FE\u518D\u751F
+heimdall.force-field-radius.name=\u8B77\u76FE\u7BC4\u570D
+heimdall.force-field-restore-time.name=\u7834\u58DE\u540E\u8B77\u76FE\u91CD\u751F\u7684\u901F\u5EA6
