--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,50 +1,50 @@
-# \u65B9\u584A
-block.cyber-io-ic-machine.name=\u7A4D\u9AD4\u96FB\u8DEF\u6A5F\u5668
-block.cyber-io-ic-machine.description=\u53EF\u4EE5\u88FD\u9020\u7A4D\u9AD4\u96FB\u8DEF\u7684\u6A5F\u5668\u3002
-lock.cyber-io-ic-machine-s.name=\u7A4D\u9AD4\u96FB\u8DEF\u88FD\u9020\u5EE0
-block.cyber-io-ic-machine-s.description=\u88FD\u4F5C\u7A4D\u9AD4\u96FB\u8DEF\u7684\u5DE5\u5EE0\uFF0C\u6548\u7387\u8F03\u6162.
-block.cyber-io-receiver.name=\u63A5\u6536\u5668
-block.cyber-io-receiver.description=\u63A5\u6536\u6578\u64DA\u3002
-block.cyber-io-sender.name=\u767C\u9001\u5668
-block.cyber-io-sender.description=\u767C\u9001\u6578\u64DA\u3002
-block.cyber-io-virus.name=\u75C5\u6BD2
-block.cyber-io-virus.description=\u7121\u9650\u50B3\u64AD\u7684\u75C5\u6BD2\u3002
-block.cyber-io-land-projector.name=\u9678\u5730\u6295\u5F71\u6A5F
-block.cyber-io-land-projector.description=\u6295\u5F71\u51FA\u53EF\u4F9B\u4F60\u9032\u884C\u5EFA\u9020\u7684\u5168\u606F\u5730\u9762\u3002
-block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u9762
-block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u9762\u3002
-block.cyber-io-holo-wall.name=\u5168\u606F\u58BB\u58C1
-block.cyber-io-holo-wall.description=\u5438\u6536\u653B\u64CA\uFF0C\u53D7\u5230\u4E9B\u8A31\u50B7\u5BB3\u540E\u9032\u5165\u4F11\u7720\u72C0\u614B\uFF0C\u7DE9\u6162\u6062\u5FA9\u8840\u91CF
-block.cyber-io-holo-wall-large.name=\u5927\u578B\u5168\u606F\u58BB\u58C1
-block.cyber-io-holo-wall-large.description=\u5438\u6536\u653B\u64CA\uFF0C\u53D7\u5230\u5927\u91CF\u4E0A\u50B7\u5BB3\u540E\u9032\u5165\u4F11\u7720\u72C0\u614B\uFF0C\u7DE9\u6162\u6062\u5FA9\u8840\u91CF
-block.cyber-io-anti-virus.name=\u9632\u6BD2\u8EDF\u9AD4
-block.cyber-io-anti-virus.description=\u9632\u6BD2\u8EDF\u9AD4\u3002
-block.cyber-io-underdrive-projector.name=\u7DE9\u901F\u904B\u8F49\u6295\u5F71\u5668
-block.cyber-io-underdrive-projector.description=\u6E1B\u7DE9\u5468\u570D\u6A5F\u5668\u7684\u904B\u8F49\u901F\u5EA6
-block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
-block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
-block.cyber-io-deleter.name=\u6839\u9664\u8005
-block.cyber-io-deleter.description=\u5411\u5916\u8F3B\u5C04\u51FA\u96E2\u5B50\u5149\u6CE2\uFF0C\n\u9020\u6210\u7BC4\u570D\u7A7F\u900F\u50B7\u5BB3\uFF0C\n\u8840\u91CF\u4F4E\u7684\u6575\u4EBA\u5C07\u6703\u88AB\u6D88\u6EC5\u3002
+# 方塊
+block.cyber-io-ic-machine.name=積體電路機器
+block.cyber-io-ic-machine.description=可以製造積體電路的機器。
+lock.cyber-io-ic-machine-s.name=積體電路製造廠
+block.cyber-io-ic-machine-s.description=製作積體電路的工廠，效率較慢.
+block.cyber-io-receiver.name=接收器
+block.cyber-io-receiver.description=接收數據。
+block.cyber-io-sender.name=發送器
+block.cyber-io-sender.description=發送數據。
+block.cyber-io-virus.name=病毒
+block.cyber-io-virus.description=無限傳播的病毒。
+block.cyber-io-land-projector.name=陸地投影機
+block.cyber-io-land-projector.description=投影出可供你進行建造的全息地面。
+block.cyber-io-holo-floor.name=全息地面
+block.cyber-io-holo-floor.description=全息地面。
+block.cyber-io-holo-wall.name=全息墻壁
+block.cyber-io-holo-wall.description=吸收攻擊，受到些許傷害后進入休眠狀態，緩慢恢復血量
+block.cyber-io-holo-wall-large.name=大型全息墻壁
+block.cyber-io-holo-wall-large.description=吸收攻擊，受到大量上傷害后進入休眠狀態，緩慢恢復血量
+block.cyber-io-anti-virus.name=防毒軟體
+block.cyber-io-anti-virus.description=防毒軟體。
+block.cyber-io-underdrive-projector.name=緩速運轉投影器
+block.cyber-io-underdrive-projector.description=減緩周圍機器的運轉速度
+block.cyber-io-hyper-overdrive-sphere.name=超光速半球
+block.cyber-io-hyper-overdrive-sphere.description=超光速！！！
+block.cyber-io-deleter.name=根除者
+block.cyber-io-deleter.description=向外輻射出離子光波，\n造成範圍穿透傷害，\n血量低的敵人將會被消滅。
 block.cyber-io-TMTRAINER.name=TMTRAINER
 block.cyber-io-TMTRAINER.description=TMTRAINER
-block.cyber-io-prism.name=\u68F1\u93E1
-block.cyber-io-prism.description=\u68F1\u93E1\u5C07\u8907\u88FD\u60A8\u7684\u5B50\u5F48\uFF0C\u56E0\u70BA\u8981\u4FDD\u8B77\u60A8\u7684\u5B89\u5168\u3002
-block.cyber-io-prism-obelisk.name=\u65B9\u5C16\u7891
-block.cyber-io-prism-obelisk.description=\u6B63\u5728\u76EF\u8457\u4F60\u54E6\u3002
-block.cyber-io-smart-distributor.name=\u667A\u80FD\u914D\u9001\u5668
-block.cyber-io-smart-distributor.description=\u4E00\u9375\u9023\u63A5\uFF0C\u914D\u9001\u60A8\u7684\u7269\u54C1\uFF0C\u6E96\u6642\u5230\u9054\u3002
+block.cyber-io-prism.name=棱鏡
+block.cyber-io-prism.description=棱鏡將複製您的子彈，因為要保護您的安全。
+block.cyber-io-prism-obelisk.name=方尖碑
+block.cyber-io-prism-obelisk.description=正在盯著你哦。
+block.cyber-io-smart-distributor.name=智能配送器
+block.cyber-io-smart-distributor.description=一鍵連接，配送您的物品，準時到達。
 block.cyber-io-smart-distributor.stats.power-use=Based on the number of items required.
-block.cyber-io-smart-unloader.name=\u667A\u80FD\u88DD\u8F09\u5668
-block.cyber-io-smart-unloader.description=\u5F9E\u5468\u570D\u7684\u65B9\u584A\u4E2D\u5378\u8F09\u6240\u9700\u8981\u7684\u7269\u54C1\uFF0C\u9001\u81F3\u9023\u63A5\u9EDE\u3002
+block.cyber-io-smart-unloader.name=智能裝載器
+block.cyber-io-smart-unloader.description=從周圍的方塊中卸載所需要的物品，送至連接點。
 block.cyber-io-smart-unloader.stats.power-use=Based on the number of connections and items required.
-block.cyber-io-stream-client.name=\u6D41\u9AD4\u5BA2\u6236\u7AEF
-block.cyber-io-stream-client.description=\u5206\u914D\u6D41\u9AD4\uFF0C\u53D7\u5230\u7DB2\u7D61\u901F\u5EA6\u9650\u5236.
-block.cyber-io-stream-host.name=\u4E32\u6D41\u5668
-block.cyber-io-stream-host.description=\u5206\u4EAB\u60A8\u7684\u4E32\u6D41\u5A92\u9AD4\uFF0C\u53EF\u4EE5\u9078\u64C7\u591A\u500B\u63A5\u53D7\u76EE\u6A19.
-block.cyber-io-stream-server.name=\u6D41\u9AD4\u4F3A\u670D\u5668
-block.cyber-io-stream-server.description=\u901A\u904E\u7DB2\u7D61\u5206\u4EAB\u5404\u7A2E\u4E32\u6D41\u5A92\u9AD4\uFF0C\u6211\u611B\u50CF\u7D20\u5DE5\u5EE0\uFF01
-block.cyber-io-jammer.name=\u5E72\u64FE\u6A5F
-block.cyber-io-jammer.description=\u5E72\u64FE\u5668\u3002\u8B66\u544A\uFF01\u624B\u6A5F\u82B1\u5C4F\u8ACB\u7ACB\u5373\u95DC\u6A5F\uFF01
+block.cyber-io-stream-client.name=流體客戶端
+block.cyber-io-stream-client.description=分配流體，受到網絡速度限制.
+block.cyber-io-stream-host.name=串流器
+block.cyber-io-stream-host.description=分享您的串流媒體，可以選擇多個接受目標.
+block.cyber-io-stream-server.name=流體伺服器
+block.cyber-io-stream-server.description=通過網絡分享各種串流媒體，我愛像素工廠！
+block.cyber-io-jammer.name=干擾機
+block.cyber-io-jammer.description=干擾器。警告！手機花屏請立即關機！
 block.cyber-io-cyberion-mixer.name=Cyberion Mixer
 block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but it does work.
 block.cyber-io-holo-projector.name=Holo Projector
@@ -59,7 +59,7 @@ block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=Data Miner
 block.cyber-io-data-miner.description=Extract the real mineral by AI. If you find this, oh, you reserved this block.
 block.cyber-io-heimdall.name=Heimdall
-block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interface and neural network, can totally change the enemy's mindset.
+block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain–computer interface and neural network, can totally change the enemy's mindset.
 block.cyber-io-heimdall.details=The artifact of New Brains Crop.
 block.cyber-io-heimdall-eye.name=Eye of Heimdall
 block.cyber-io-heimdall-eye.description=A detachable component, designed for heimdall improvement, can stare at anyone that it considers as an enemy.
@@ -67,9 +67,9 @@ block.cyber-io-heimdall-eye.details=The upgrade component developed by New Brain
 block.cyber-io-heimdall-ear.name=Ear of Heimdall
 block.cyber-io-heimdall-ear.description=A sonic sensor, designed for heimdall upgrade, can detect the vibration of enemy and realize the sonic wave by mind power.
 block.cyber-io-heimdall-ear.details=The upgrade component developed by New Brains Crop.
-# \u7269\u54C1
-item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
-item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
+# 物品
+item.cyber-io-ic.name=積體電路
+item.cyber-io-ic.description=一塊晶片。
 # Liquids
 liquid.cyber-io-cyberion.name=Cyberion
 liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but no one knows how it does work.
@@ -85,24 +85,24 @@ unit.cyber-io-holo-architect.description=A builder projected by Holo Projector, 
 unit.cyber-io-holo-supporter.name=Holo Supporter
 unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, but it can't save itself.
 #Bars
-bar.cyber-io.generation={0} \u4EE3
-bar.cyber-io.slow-down=\u904B\u8F49\u901F\u5EA6\uFF1A-{0}%
-bar.cyber-io.efficiency-absorption=\u6548\u7387\u5438\u6536\uFF1A{0}%
-bar.cyber-io.range=\u7BC4\u570D\uFF1A{0}\u65B9\u584A
-bar.cyber-io.cool-down=\u51B7\u537B\uFF1A{0}\u79D2
-bar.cyber-io.is-alive=\u5B58\u6D3B\u8457\uFF1A{0}
-bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u4E2D\uFF1A{0}
-bar.cyber-io.rest-restore=\u6062\u5FA9\u503C\u8840\u69FD\uFF1A{0}
-bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
-bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
-bar.cyber-io.prism=\u68F1\u93E1
-bar.cyber-io.linked=\u5DF2\u9023\u63A5
-bar.cyber-io.unlinked=\u672A\u9023\u63A5
-bar.cyber-io.receiver=\u63A5\u6536\u7AEF
-bar.cyber-io.sender=\u767C\u9001\u7AEF
-bar.cyber-io.null=\u7A7A
-bar.cyber-io.client=\u5BA2\u6236\u7AEF
-bar.cyber-io.host=\u4E32\u6D41\u5668
+bar.cyber-io.generation={0} 代
+bar.cyber-io.slow-down=運轉速度：-{0}%
+bar.cyber-io.efficiency-absorption=效率吸收：{0}%
+bar.cyber-io.range=範圍：{0}方塊
+bar.cyber-io.cool-down=冷卻：{0}秒
+bar.cyber-io.is-alive=存活著：{0}
+bar.cyber-io.is-projecting=正在投影中：{0}
+bar.cyber-io.rest-restore=恢復值血槽：{0}
+bar.cyber-io.charge=充能：{0}秒
+bar.cyber-io.last-damaged=最後傷害時間：{0}秒
+bar.cyber-io.prism=棱鏡
+bar.cyber-io.linked=已連接
+bar.cyber-io.unlinked=未連接
+bar.cyber-io.receiver=接收端
+bar.cyber-io.sender=發送端
+bar.cyber-io.null=空
+bar.cyber-io.client=客戶端
+bar.cyber-io.host=串流器
 bar.cyber-io.rest-life=Rest Life
 bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
@@ -114,17 +114,17 @@ cyber-io.speed-increase.range=from {0}% to {1}%
 control.cyber-io.update-mod.success=CyberIO {0} updated successfully. Please restart the game to reload CyberIO.
 control.cyber-io.update-mod.failed=Failed to update CyberIO because {0}.
 # StatusEffects
-status.cyber-io-infected.name=\u611F\u67D3
-status.cyber-io-infected.description=\u76EE\u6A19\u6703\u6839\u64DA\u6700\u5927\u751F\u547D\u503C\u4F86\u53D7\u5230\u50B7\u5BB3\u3002
-status.cyber-io-vulnerable.name=\u6613\u640D
-status.cyber-io-vulnerable.description=\u7576\u5FC3\u9EDE\uFF01\u4ED6\u5011\u96A8\u6642\u90FD\u6703\u6B7B\u6389\u7684\uFF01
-status.cyber-io-static.name=\u5E72\u64FE
-status.cyber-io-static.description=\u8B66\u544A\uFF01\u53D7\u5230\u4FE1\u865F\u5E72\u64FE\u653B\u64CA\uFF01
+status.cyber-io-infected.name=感染
+status.cyber-io-infected.description=目標會根據最大生命值來受到傷害。
+status.cyber-io-vulnerable.name=易損
+status.cyber-io-vulnerable.description=當心點！他們隨時都會死掉的！
+status.cyber-io-static.name=干擾
+status.cyber-io-static.description=警告！受到信號干擾攻擊！
 # Abilities
 Ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuating over time.
 ability.cyber-io-holo-force-field=Projecting auto-regenerating holographic force field.
-# \u8A2D\u7F6E
-setting.cyber-io-connection-opacity.name=\u9023\u63A5\u4E0D\u900F\u660E\u5EA6
+# 設置
+setting.cyber-io-connection-opacity.name=連接不透明度
 setting.cyber-io-connection-density.name=Connection Density
 setting.cyber-io-connection-size.name=Connection Arrow Size
 setting.cyber-io-show-link-circle.name=Show Connection Circle
