急乐赢麻绷

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -149,7 +149,7 @@ cyber-io.full-client=已达到获取端最大数量
 cyber-io.over-range=超过范围
 cyber-io.unsaved-change=你还没有保存更改
 cyber-io.unlimited=无限
-cyber-io.random-name=锟斤拷缴叫迎实皆椋一甚癸碉巍愿芏慧猓搬霉嶎蔷牵诓同谈狻憋截脚窖芏喽希硬唷猓知藉匡轿筹泰疚始秸獠硷蔚蔷郏牡饺频腋妗邪驯辖晒谋卟桔蟮图岫芄值避捷酆羌黄诎鞋埽芸蘸眩恍蛊薪痛志缺吭鄄拢毓诙瑟芗透纭
+cyber-io.random-name=锟斤拷缴叫迎实皆椋一甚癸碉巍愿芏慧猓搬霉嶎蔷牵诓同谈狻憋截脚窖芏喽希硬唷猓知藉匡轿筹泰疚始秸獠硷蔚蔷郏牡饺频腋妗邪驯辖晒谋卟桔蟮图岫芄值避捷酆羌黄诎鞋埽芸蘸眩恍蛊薪痛志缺吭鄄拢毓诙瑟芗透纭急乐赢麻对蚌埠绷爬
 # Controls
 control.cyber-io.enable=开启 {0}
 control.cyber-io.validate=验证
