Updated zh_TW bundle

--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -68,7 +68,7 @@ block.cyber-io-stealth.unaccepted=沒有權限
 block.cyber-io-aqua-cyberion.name=賽博龍
 block.cyber-io-aqua-cyberion.description=普普通通的液體。
 block.cyber-io-wireless-tower.name=無線塔
-block.cyber-io-wireless-tower.details=為電池充電。無須擔心，電離輻射對於你的機身無害。
+block.cyber-io-wireless-tower.description=為電池充電。無須擔心，電離輻射對於你的機身無害。
 block.cyber-io-wireless-tower.details=由Plum Star公司提供支持。
 block.cyber-io-wireless-tower.stats.power-use=取決於所使用的電力。
 block.cyber-io-data-miner.name=數據礦工
