--- a/assets/bundles/bundle_in_ID.properties
+++ b/assets/bundles/bundle_in_ID.properties
@@ -107,5 +107,108 @@ advanced.cyber-io.github-mirror.button=Mirror GitHub
 advanced.cyber-io.github-mirror.dialog=Masukkan URL Mirror Github
 advanced.cyber-io.map-cleaner=Pembersih Peta
 setting.cyber-io-show-update.name=Tampilkan notifikasi pembaruan Cyber IO
-# ""real"" translations
+advanced.cyber-io.map-cleaner.description=Menyalakan pembersih peta.
 
+# Any translations after this comment was Translated by Google Translate.
+block.cyber-io-deleter.stats.bullet.damage=[stat]{0} + {1}% kehilangan HP [lightgray] damage
+block.cyber-io-deleter.stats.bullet.execution=Jalankan HP <= [stat]{0}%[lightgray]
+block.cyber-io-prisma-obelisk.tip=Tautkan dengan Prisma berdampingan
+block.cyber-io-smart-distributor.tip=Distribusikan ke lingkungan secara berdampingan.
+block.cyber-io-smart-unloader.description=Smart Unloader dapat meringankan beban transportasi yang berat dan membantu meningkatkan mobilitas.
+block.cyber-io-smart-unloader.stats.power-use=Berdasarkan jumlah koneksi dan item yang diperlukan.
+block.cyber-io-smart-unloader.tip=Bongkar dari lingkungan secara berdampingan.
+block.cyber-io-stream-client.description=Klien bisa mendapatkan cairan instan tetapi dibatasi oleh kecepatan jaringan.
+block.cyber-io-stream-host.name= Host Stream
+block.cyber-io-stream-host.description=Menghosting streaming Anda. Setiap klien bisa mendapatkan siaran Anda jika mereka mau.
+block.cyber-io-stream-host.stats.power-use=Berdasarkan jumlah koneksi.
+block.cyber-io-stream-server.name=Server Stream
+block.cyber-io-stream-server.description=Server streaming langsung tempat Anda dapat berbagi pengalaman pribadi tentang game Mindustry! Nikmati diri Anda sendiri!
+block.cyber-io-stream-server.stats.power-use=Berdasarkan jumlah koneksi host/klien.
+block.cyber-io-jammer.name=Jammer
+block.cyber-io-jammer.description=Peringatan! Ponsel Anda mungkin macet karenanya!
+block.cyber-io-heimdall.description=Kombinasi biotek, ilmu otak, dan IoT, menggunakan antarmuka komputer Brain\u2013dan jaringan saraf, dapat mengubah pola pikir musuh secara total.
+block.cyber-io-heimdall.details=Proyek Tanaman Otak Baru.
+block.cyber-io-heimdall.stats.power-use=Berdasarkan komponen yang ditingkatkan.
+block.cyber-io-heimdall-eye.description=Komponen yang dapat dilepas, dirancang untuk peningkatan heimdall, dapat menatap siapa pun yang dianggapnya sebagai musuh.
+block.cyber-io-heimdall-eye.details=Komponen upgrade yang dikembangkan oleh New Brains Crop.
+block.cyber-io-heimdall-ear.description=Sebuah sensor sonik, dirancang untuk peningkatan heimdall, dapat mendeteksi getaran musuh dan mewujudkan gelombang sonik dengan kekuatan pikiran.
+block.cyber-io-heimdall-ear.details=Komponen upgrade yang dikembangkan oleh New Brains Crop.
+block.cyber-io-heimdall-heart.description=Hasil terbaru dari Proyek Heimdall, dan masih dalam pengujian mutakhir.
+block.cyber-io-heimdall-heart.details=Komponen upgrade dirancang untuk independen oleh New Brains Crop.
+block.cyber-io-p2p-node.description=Komunikasi pertukaran cairan yang terdesentralisasi.
+liquid.cyber-io-cyberion.description=Cairan mahal yang dikembangkan oleh Plum Star Inc.
+unit.cyber-io-holo-miner.description=Seekor lebah pekerja berumur pendek yang diproyeksikan oleh Proyektor Holo.
+bar.cyber-io.range=Rentang: {0} blok
+bar.cyber-io.cool-down=Dinginkan: {0}s
+bar.cyber-io.rest-restore=Pemulihan Istirahat: {0}
+bar.cyber-io.rest-life=Hidup Istirahat
+bar.cyber-io.rest-life.figure=Kehidupan Istirahat: {0}s
+bar.cyber-io.rest-resurrect=Hidup Istirahat: {0} kali
+stat.cyber-io-data-transfer-max-sender=Pengirim Maks
+stat.cyber-io-data-transfer-max-receiver=Penerima Maks
+stat.cyber-io-data-transfer-max-host=Host Maks
+stat.cyber-io-data-transfer-max-client=Klien Maks
+stat.cyber-io-data-transfer-speed=Kecepatan Transfer
+stat.power-cyber-io-transfer-speed=Kecepatan Transfer
+stat.optional-cyber-io-max-obelisk=Obelisk Maks
+stat.cyber-io-holography-charge=Pengisian Daya
+stat.cyber-io-holography-hp-at-least=Setidaknya Kesehatan
+cyber-io.speed-increase.range=dari {0}% hingga {1}%
+cyber-io.full-sender=Mencapai Pengirim Maksimum
+cyber-io.full-receiver=Mencapai Penerima Maksimum
+cyber-io.over-range=Melebihi Jangkauan
+cyber-io.unsaved-change=Anda memiliki perubahan yang belum disimpan
+cyber-io.unlimited=Tidak Terbatas
+control.cyber-io.enable=Aktifkan {0}
+control.cyber-io.validate=Validasi
+control.cyber-io.update-mod.success=CyberIO {0} berhasil diperbarui. Silakan restart game untuk memuat ulang CyberIO.
+control.cyber-io.update-mod.failed=Gagal memperbarui CyberIO karena {0}.
+status.cyber-io-infected.description=Yang terinfeksi akan terluka berdasarkan HP mereka saat ini.
+status.cyber-io-vulnerable.description=HATI-HATI! Mereka akan mati kapan saja!
+status.cyber-io-static.name=Statis
+status.cyber-io-static.description=Peringatan! Gangguan sinyal terdeteksi.
+ability.cyber-io-holo=Unit proyeksi holografik yang menggunakan Cyberion melemah seiring waktu.
+ability.cyber-io-holo-force-field=Memproyeksikan medan gaya holografik yang beregenerasi secara otomatis.
+setting.cyber-io-connection-opacity.name=Keburaman Koneksi
+setting.cyber-io-connection-opacity.description=Keburaman panah antara pengirim dan penerima.
+setting.cyber-io-connection-density.name=Kepadatan Koneksi
+setting.cyber-io-connection-density.description=Kepadatan panah antara pengirim dan penerima.
+setting.cyber-io-connection-size.name=Ukuran Panah Koneksi
+setting.cyber-io-connection-size.description=Ukuran panah antara pengirim dan penerima.
+setting.cyber-io-connection-bloom.name=Bloom Panah Koneksi
+setting.cyber-io-connection-animation-speed.name=Kecepatan Animasi Koneksi
+setting.cyber-io-connection-animation-speed.description=Kecepatan animasi koneksi antara pengirim dan penerima.
+setting.cyber-io-show-link-circle.name=Tampilkan Lingkaran Koneksi
+setting.cyber-io-show-link-circle.description=Apakah menunjukkan lingkaran yang mengelilingi pengirim dan penerima.
+setting.cyber-io-always-show-link.name=Selalu Tampilkan Koneksi
+setting.cyber-io-always-show-link.description=Apakah panah selalu muncul saat tersambung.
+setting.cyber-io-show-wireless-tower-circle.name=Tampilkan Lingkaran Menara Nirkabel
+setting.cyber-io-show-wireless-tower-circle.description=Apakah lingkaran ping tak terbatas akan muncul
+setting.cyber-io-show-welcome.name=Terima Pesan dari Plum Star Inc.
+setting.cyber-io-show-welcome.description=Apakah teks pesan muncul saat permainan dimulai.
+status.cyber-io-vulnerable.name=Rentan
+unit.cyber-io-holo-fighter.description=Pejuang fana yang diproyeksikan oleh Proyektor Holo.
+unit.cyber-io-holo-guardian.description=Penjaga untuk Plum Star Inc. yang diproyeksikan oleh Proyektor Holo, tetapi berisiko pada lehernya.
+unit.cyber-io-holo-architect.description=Pembuat yang diproyeksikan oleh Proyektor Holo, tetapi tidak dibuat.
+unit.cyber-io-holo-supporter.description=Dukungan yang diproyeksikan oleh Proyektor Holo, tetapi tidak dapat ditukarkan dengan sendirinya.
+bar.cyber-io.slow-down=Tingkatkan: -{0}%
+bar.cyber-io.efficiency-absorption=Efisiensi Penyerapan: {0}%
+setting.cyber-io-show-update.description=Apakah memeriksa pembaruan saat permainan dimulai.
+setting.cyber-io-check-update.button-tooltip=Periksa apakah Cyber IO saat ini adalah yang terbaru.
+setting.cyber-io-check-update.already-latest=Cyber IO saat ini sudah yang terbaru.
+setting.cyber-io-check-update.not-support=Periksa pembaruan tidak mendukung.
+setting.cyber-io-content-specific.button-tip=Pilih konten khusus Cyber IO
+setting.cyber-io-content-specific.restart=Berhasil beralih ke {0}. Silakan restart game untuk memuat ulang semua konten.
+setting.cyber-io-content-specific.introduction=Pilih versi tertentu untuk memuat Cyber IO
+setting.cyber-io-content-specific.saves-warning=CATATAN: penyimpanan dengan Cyber IO tidak dapat dibagikan di antara versi tertentu yang berbeda.
+setting.cyber-io-content-specific.switch-to=Anda akan beralih ke {0}
+setting.cyber-io-content-specific.switch-back=Anda beralih kembali ke {0}
+setting.cyber-io-content-specific.require-restart=Diperlukan mulai ulang.
+setting.cyber-io-advanced-function.title=Fungsi Lanjutan
+advanced.cyber-io.github-mirror.button-tooltip=Setel mirror GitHub.\nGunakan hanya jika Anda tidak dapat mengakses GitHub secara normal.
+advanced.cyber-io.github-mirror.failed=Tidak dapat memvalidasi {0} karena {1}
+advanced.cyber-io.github-mirror.success=Validasi berhasil !\nGitHub mirror disetel sebagai {0}.
+advanced.cyber-io.github-mirror.reset=Cermin GitHub disetel ulang sebagai {0}.
+advanced.cyber-io.github-mirror.field-tooltip=Klik tombol simpan untuk memvalidasi url ini.\n\Kosongkan ini dan simpan untuk mengatur ulang url.
+advanced.cyber-io.github-mirror.save-tooltip=Simpan setelah validasi
+advanced.cyber-io.github-mirror.cancel-tooltip=Hapus masukan.
